fixing text overflow on mobile

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -263,9 +263,9 @@ footer {
     height: 95vh;
   }
   .mission {
-    margin-top: 10vh;
+    margin-top: 6vh;
     width: 50vw;
-    min-width: 200px;
+    min-width: 220px;
     height: 70vh;
     min-height: 465px;
   }
